--- a/inherited-homes/index.html
+++ b/inherited-homes/index.html
@@ -1,1 +1,300 @@
-<!doctype html><html><head><title>Inherited Homes Market Performance</title></head><body><h1>Coming Soon</h1></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Inherited Homes & Probate Properties Market Performance — Caleb Travers</title>
+  <meta name="description" content="Caleb Travers’ verified track record representing inherited homes and probate properties. Attorney-ready details: pricing, DOM, services rendered, and outcome highlights." />
+  <meta name="author" content="Caleb Travers" />
+  <meta property="og:title" content="My Track Record with Inherited Homes & Probate Properties — Caleb Travers" />
+  <meta property="og:description" content="A results-focused record of inherited & probate sales by Caleb Travers, with fiduciary clarity and verifiable documentation." />
+  <meta property="og:image" content="assets/banner-probate.jpg" />
+  <meta property="og:type" content="website" />
+  <style>
+    :root{
+      --bg:#0b0c10; --card:#111319; --ink:#e6edf3; --muted:#9aa4b2; --accent:#7dd3fc; --ok:#86efac; --warn:#fde68a;
+      --ring: rgba(125,211,252,.35);
+    }
+    html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font:16px/1.55 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji"}
+    .wrap{max-width:1100px;margin:40px auto;padding:0 20px}
+
+    /* Banner — EXACT investor layout minus link directory */
+    .banner{display:flex;align-items:center;justify-content:space-between;background:#0b0c10;border-radius:8px;padding:12px 20px;margin-bottom:32px;border:1px solid rgba(255,255,255,.08)}
+    .brand{display:flex;align-items:center;gap:12px}
+    .brand img{height:40px;width:40px;border-radius:8px}
+    .brand .info{display:flex;flex-direction:column;line-height:1.2}
+    .brand .info strong{font-size:15px;color:#fff}
+    .brand .info span{font-size:12px;color:var(--muted)}
+    .actions{display:flex;align-items:center;gap:12px}
+    .actions img{height:48px;width:48px;border-radius:50%;object-fit:cover}
+    .actions a{background:var(--accent);color:#000;padding:6px 14px;border-radius:6px;text-decoration:none;font-size:13px;font-weight:600}
+
+    header{display:flex;align-items:baseline;justify-content:space-between;gap:20px;margin-bottom:24px}
+    h1{font-size:28px;margin:0}
+    .sub{color:var(--muted);font-size:14px}
+
+    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(320px,1fr));gap:16px}
+    .card{background:var(--card);border:1px solid rgba(255,255,255,.06);border-radius:16px;padding:16px;box-shadow:0 10px 25px rgba(0,0,0,.25)}
+    .badge{display:inline-block;padding:4px 10px;border-radius:999px;font-size:12px;font-weight:600;letter-spacing:.2px}
+    .active{background:rgba(125,211,252,.08);color:var(--accent);border:1px solid var(--ring)}
+    .closed{background:rgba(134,239,172,.08);color:var(--ok);border:1px solid rgba(134,239,172,.35)}
+    .uc{background:rgba(253,230,138,.08);color:var(--warn);border:1px solid rgba(253,230,138,.35)}
+    .coming{background:rgba(253,230,138,.08);color:var(--warn);border:1px solid rgba(253,230,138,.35)}
+    .addr{font-weight:700;margin:8px 0 2px}
+    .date{color:var(--muted);font-size:12px}
+
+    dl{display:grid;grid-template-columns:auto 1fr;gap:6px 10px;margin:12px 0}
+    dt{color:var(--muted)}
+    dd{margin:0}
+
+    .section-label{margin-top:10px;color:var(--muted);font-size:12px;text-transform:uppercase;letter-spacing:.05em}
+    ul{margin:6px 0 0 18px;padding:0}
+    li{margin:4px 0}
+
+    footer{margin:30px 0 10px;color:var(--muted);font-size:12px;text-align:center;line-height:1.5}
+    .legal{opacity:.9}
+  </style>
+</head>
+<body>
+  <div class="wrap">
+
+    <!-- Banner (logo + name/title left, profile + About button right) -->
+    <div class="banner">
+      <div class="brand">
+        <img src="https://caleb-travers-media-mock-up.carrd.co/assets/images/image08.png?v=98f114b0" alt="Caleb Travers logo">
+        <div class="info">
+          <strong>Caleb Travers</strong>
+          <span>REALTOR®</span>
+          <span>Inherited & Probate Market Performance</span>
+        </div>
+      </div>
+      <div class="actions">
+        <img src="https://calebtravers.com/assets/images/image01.jpg?v=73f889d6" alt="Caleb Travers">
+        <a href="https://calebtravers.com">About Caleb</a>
+      </div>
+    </div>
+
+    <section class="grid">
+
+      <!-- SEPT 2025 -->
+      <article class="card">
+        <span class="badge coming">Coming Soon</span>
+        <div class="addr">316 Country Orchard, O’Fallon</div>
+        <div class="date">September 2025</div>
+        <dl>
+          <dt>List</dt><dd>$515,000</dd>
+          <dt>Expected DOM</dt><dd>21</dd>
+          <dt>Expected Market</dt><dd>$525,000+</dd>
+        </dl>
+        <div class="section-label">Services Rendered</div>
+        <ul>
+          <li>Connected seller with carpet replacement, junk hauling, deep clean, and odor mitigation</li>
+        </ul>
+      </article>
+
+      <article class="card">
+        <span class="badge active">Active</span>
+        <div class="addr">863 Emge Rd, O’Fallon</div>
+        <div class="date">September 2025</div>
+        <dl>
+          <dt>List</dt><dd>$350,000</dd>
+          <dt>Expected DOM</dt><dd>40–60</dd>
+        </dl>
+        <div class="section-label">Services Rendered</div>
+        <ul>
+          <li>Comprehensive market analysis and positioning for multiple buyer classes (owner-occupants, developers, investors) on 3-acre parcel with varied exit strategies</li>
+        </ul>
+      </article>
+
+      <article class="card">
+        <span class="badge active">Active</span>
+        <div class="addr">801 Elsworth, St. Louis</div>
+        <div class="date">September 2025</div>
+        <dl>
+          <dt>List</dt><dd>$85,000</dd>
+          <dt>Expected DOM</dt><dd>~30</dd>
+        </dl>
+        <div class="section-label">Services Rendered</div>
+        <ul>
+          <li>Detailed market analysis on local after-rehab comps and rental data</li>
+          <li>Investor-specific marketing with aggressive pricing to maximize final offer</li>
+        </ul>
+      </article>
+
+      <!-- AUG 2025 -->
+      <article class="card">
+        <span class="badge uc">Under Contract</span>
+        <div class="addr">4097 Fox Island, St. Louis</div>
+        <div class="date">August 2025</div>
+        <dl>
+          <dt>Expected MV</dt><dd>~$185,000</dd>
+          <dt>Seller Accepted</dt><dd>$145,000 (direct investor purchase)</dd>
+          <dt>Subsequent Resale</dt><dd>$185,000</dd>
+        </dl>
+        <div class="section-label">Services Rendered</div>
+        <ul>
+          <li>Fully advised seller on true market value but facilitated direct investor purchase to meet their stated priorities</li>
+          <li>Facilitated subsequent resale for initial buyer at the exact predicted final sale price, validating the detailed market analysis</li>
+        </ul>
+        <div class="section-label">Outcome Highlights</div>
+        <ul>
+          <li>Seller prioritized certainty and speed over maximizing price</li>
+          <li>Complete transparency to seller in predicted market performance</li>
+        </ul>
+      </article>
+
+      <article class="card">
+        <span class="badge uc">Under Contract</span>
+        <div class="addr">1505 Telegraph Rd, St. Louis</div>
+        <div class="date">August 2025</div>
+        <dl>
+          <dt>List</dt><dd>$139,000</dd>
+          <dt>Sold</dt><dd>$150,000</dd>
+          <dt>DOM</dt><dd>2</dd>
+        </dl>
+        <div class="section-label">Services Rendered</div>
+        <ul>
+          <li>Detailed market analysis of after-rehab comps and rental data to secure a maximally competitive final offer price</li>
+          <li>Out-of-town seller — connected with lawn care and property maintenance services</li>
+        </ul>
+        <div class="section-label">Outcome Highlights</div>
+        <ul>
+          <li>Seller netted 17% over cash offer in hand</li>
+        </ul>
+      </article>
+
+      <!-- JUNE & MAY 2025 -->
+      <article class="card">
+        <span class="badge closed">Closed</span>
+        <div class="addr">748 Emerald Oaks Ct, Eureka</div>
+        <div class="date">June 2025</div>
+        <dl>
+          <dt>List</dt><dd>$415,000</dd>
+          <dt>Sold</dt><dd>$440,000</dd>
+          <dt>DOM</dt><dd>5</dd>
+        </dl>
+        <div class="section-label">Services Rendered</div>
+        <ul>
+          <li>Coordinated clean out, estate sale, handyman repairs, and deep clean</li>
+          <li>Provided comp-supported pricing to correct overpricing mistakes from competing agents</li>
+          <li>Managed all logistics for an out-of-state seller</li>
+        </ul>
+        <div class="section-label">Outcome Highlights</div>
+        <ul>
+          <li>$25,000 over asking in 5 days</li>
+          <li>No concessions</li>
+        </ul>
+      </article>
+
+      <article class="card">
+        <span class="badge closed">Closed</span>
+        <div class="addr">7343 Tournament Dr, St. Louis</div>
+        <div class="date">May 2025</div>
+        <dl>
+          <dt>List</dt><dd>$325,000</dd>
+          <dt>Sold</dt><dd>$325,000</dd>
+          <dt>DOM</dt><dd>5</dd>
+        </dl>
+        <div class="section-label">Services Rendered</div>
+        <ul>
+          <li>Out-of-town seller — coordinated occupancy repairs with licensed contractor on newer-construction home that had been neglected</li>
+          <li>Prevented significantly lower market performance by bringing up to occupancy and market standard</li>
+        </ul>
+        <div class="section-label">Outcome Highlights</div>
+        <ul>
+          <li>Full ask</li>
+          <li>No concessions</li>
+        </ul>
+      </article>
+
+      <!-- DEC 2024 -->
+      <article class="card">
+        <span class="badge closed">Closed</span>
+        <div class="addr">Walton Rd, St. Louis</div>
+        <div class="date">December 2024</div>
+        <dl>
+          <dt>List</dt><dd>$139,000</dd>
+          <dt>Sold</dt><dd>$145,000</dd>
+          <dt>DOM</dt><dd>1</dd>
+        </dl>
+        <div class="section-label">Services Rendered</div>
+        <ul>
+          <li>Detailed CMA to maximize final offer and minimize time on market, reducing seller holding costs</li>
+        </ul>
+        <div class="section-label">Outcome Highlights</div>
+        <ul>
+          <li>Achieved $6,000 over asking in 1 day</li>
+          <li>No concessions</li>
+        </ul>
+      </article>
+
+      <article class="card">
+        <span class="badge closed">Closed</span>
+        <div class="addr">Upland Dr, St. Louis</div>
+        <div class="date">December 2024</div>
+        <dl>
+          <dt>List</dt><dd>$129,000</dd>
+          <dt>Sold</dt><dd>$135,000</dd>
+          <dt>DOM</dt><dd>1</dd>
+        </dl>
+        <div class="section-label">Services Rendered</div>
+        <ul>
+          <li>Detailed market analysis of after-rehab comps and rental data to secure a maximally competitive final offer price</li>
+        </ul>
+        <div class="section-label">Outcome Highlights</div>
+        <ul>
+          <li>Seller netted 17% over cash offer in hand</li>
+        </ul>
+      </article>
+
+      <article class="card">
+        <span class="badge closed">Closed</span>
+        <div class="addr">1342 Warwick Dr, St. Louis</div>
+        <div class="date">October 2024</div>
+        <dl>
+          <dt>List</dt><dd>$365,000</dd>
+          <dt>Sold</dt><dd>$325,000</dd>
+          <dt>DOM</dt><dd>28</dd>
+        </dl>
+        <div class="section-label">Services Rendered</div>
+        <ul>
+          <li>Provided pricing guidance — several recommended prep items were declined by family members, which limited market performance</li>
+        </ul>
+        <div class="section-label">Outcome Highlights</div>
+        <ul>
+          <li>Under asking due to declined prep guidance</li>
+        </ul>
+      </article>
+
+      <!-- FEB 2024 -->
+      <article class="card">
+        <span class="badge closed">Closed</span>
+        <div class="addr">2947 Annunciation Dr, St. Louis</div>
+        <div class="date">February 2024</div>
+        <dl>
+          <dt>List</dt><dd>$215,000</dd>
+          <dt>Sold</dt><dd>$225,000</dd>
+          <dt>DOM</dt><dd>2</dd>
+        </dl>
+        <div class="section-label">Services Rendered</div>
+        <ul>
+          <li>Guided seller through occupancy inspection by connecting with handyman services to bring the home up to occupancy standard to prevent significantly lower market performance</li>
+          <li>Coordinated estate buyer and deep cleaning services</li>
+        </ul>
+        <div class="section-label">Outcome Highlights</div>
+        <ul>
+          <li>$10,000 over asking in 2 days</li>
+          <li>No concessions</li>
+        </ul>
+      </article>
+
+    </section>
+
+    <footer>
+      <div id="about" class="legal">
+        <p class="legal">Some transactions shown here were completed off the MLS. Verified documentation (contracts, closing statements, and correspondence) can be produced upon request to substantiate all prices, dates, and outcomes cited on this page. </p>
+      </div>
+    </footer>
+  </div>
+</body>
+</html>
