--- a/inherited-homes/index.html
+++ b/inherited-homes/index.html
@@ -2,14 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Inherited Homes & Probate Properties Market Performance — Caleb Travers</title>
-  <meta name="description" content="Caleb Travers’ verified track record representing inherited homes and probate properties. Attorney-ready details: pricing, DOM, services rendered, and outcome highlights." />
-  <meta name="author" content="Caleb Travers" />
-  <meta property="og:title" content="My Track Record with Inherited Homes & Probate Properties — Caleb Travers" />
-  <meta property="og:description" content="A results-focused record of inherited & probate sales by Caleb Travers, with fiduciary clarity and verifiable documentation." />
-  <meta property="og:image" content="assets/banner-probate.jpg" />
-  <meta property="og:type" content="website" />
+  <link rel="icon" type="image/png" href="https://caleb-travers-media-mock-up.carrd.co/assets/images/image08.png?v=98f114b0" />
+
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Inherited Homes & Probate Properties Market Performance — Caleb Travers</title>
+<meta name="description" content="Caleb Travers’ verified track record representing inherited homes and probate properties. Attorney-ready details: pricing, DOM, services rendered, and outcome highlights." />
+<meta name="author" content="Caleb Travers" />
+
+<!-- Open Graph / Facebook / LinkedIn -->
+<meta property="og:title" content="My Track Record with Inherited Homes & Probate Properties — Caleb Travers" />
+<meta property="og:description" content="A results-focused record of inherited & probate sales by Caleb Travers, with fiduciary clarity and verifiable documentation." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://market-performance.calebtravers.com/inherited-homes/" />
+<meta property="og:image" content="https://market-performance.calebtravers.com/inherited-homes/assets/images/inherited-homes-page-preview.jpg" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="My Track Record with Inherited Homes & Probate Properties — Caleb Travers" />
+<meta name="twitter:description" content="A results-focused record of inherited & probate sales by Caleb Travers, with fiduciary clarity and verifiable documentation." />
+<meta name="twitter:image" content="https://market-performance.calebtravers.com/inherited-homes/assets/images/inherited-homes-page-preview.jpg" />
+  
   <style>
     :root{
       --bg:#0b0c10; --card:#111319; --ink:#e6edf3; --muted:#9aa4b2; --accent:#7dd3fc; --ok:#86efac; --warn:#fde68a;
