Correct preview image urls

--- a/inherited-homes/index.html
+++ b/inherited-homes/index.html
@@ -14,7 +14,7 @@
 <meta property="og:description" content="A results-focused record of inherited & probate sales by Caleb Travers, with fiduciary clarity and verifiable documentation." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://market-performance.calebtravers.com/inherited-homes/" />
-<meta property="og:image" content="https://market-performance.calebtravers.com/inherited-homes/assets/images/inherited-homes-page-preview.jpg" />
+<meta property="og:image" content="https://market-performance.calebtravers.com/inherited-homes/assets/images/inherited-homes-page-preview.png" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
 
@@ -22,7 +22,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="My Track Record with Inherited Homes & Probate Properties — Caleb Travers" />
 <meta name="twitter:description" content="A results-focused record of inherited & probate sales by Caleb Travers, with fiduciary clarity and verifiable documentation." />
-<meta name="twitter:image" content="https://market-performance.calebtravers.com/inherited-homes/assets/images/inherited-homes-page-preview.jpg" />
+<meta name="twitter:image" content="https://market-performance.calebtravers.com/inherited-homes/assets/images/inherited-homes-page-preview.png" />
   
   <style>
     :root{
